--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botui": "^0.3.4",
-    "v-mask": "^1.3.2",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-the-mask": "^0.11.1"
   }
 }
